# quadrotor_landing

./: README.md
ardrone_moves/: CMakeLists.txt
ardrone_moves/launch/: ardrone_keyboard_control.launch
ardrone_moves/src/: ardrone_keyboard_control.cpp
summit_moves/launch/: summit_moves.launch
takeoff/: CMakeLists.txt
uav_vision/: CMakeLists.txt  package.xml
uav_vision/launch/: platform_tracking.launch
uav_vision/src/: platform_detection.cpp  platform_tracking.cpp
