<?xml version="1.0"?>
<package>
  <name>uav_vision</name>
  <version>0.0.0</version>
  <description>The Detection and Tracking package</description>
  <maintainer email="rebba498@gmail.com">pablo</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>image_view</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cvg_sim_msgs</build_depend>
  <build_depend>ardrone_autonomy</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>cvg_sim_msgs</run_depend>
  <run_depend>ardrone_autonomy</run_depend>

</package>
